# silver-theme

./: CMakeLists.txt  README.md  uninstall.sh
colors/: CMakeLists.txt  LogawinnerDark.colors  OpalFruitsDark.colors  OpalFruitsLight.colors  SilverDark.colors  SilverLight.colors  SonicColorfulDark.colors
desktoptheme/: CMakeLists.txt
kdecoration/: CMakeLists.txt  Messages.sh  breeze.json  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezesettingsprovider.cpp  kdecorationglobals.h
kstyle/: CMakeLists.txt  breeze.kcfg  breezedecorationsettingsprovider.cpp  breezedecorationsettingsprovider.h  breezehelper.cpp  breezemetrics.h  (+4 more)
look-and-feel/: CMakeLists.txt
look-and-feel/org.kde.silverdarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.silverdarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.silverdarkleftpanel.desktop/contents/: defaults
look-and-feel/org.kde.silverkairndarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.silverkairndarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.silverkairnlightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.silverkairnlightbottompanel.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
look-and-feel/org.kde.silverkairnlightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.silverkitedarkbottompanel.desktop/: metadata.json
look-and-feel/org.kde.silverkitedarkbottompanel.desktop/contents/: defaults
look-and-feel/org.kde.silverkitedarkleftpanel.desktop/: metadata.json
look-and-feel/org.kde.silverkitelightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.silverkitelightbottompanel.desktop/contents/: defaults
look-and-feel/org.kde.silverkitelightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.silverlightbottompanel.desktop/: metadata.json
look-and-feel/org.kde.silverlightbottompanel.desktop/contents/: defaults
look-and-feel/org.kde.silverlightleftpanel.desktop/: metadata.json
look-and-feel/org.kde.silverlightleftpanel.desktop/contents/layouts/: org.kde.plasma.desktop-layout.js
(+148 files in other folders)
