install(FILES SilverDark.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES SilverLight.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES OpalFruitsDark.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
install(FILES OpalFruitsLight.colors
        DESTINATION ${KDE_INSTALL_DATADIR}/color-schemes/)
